inc = include_directories('.')
lib = static_library(
  'yxtrang',
  sources : [
    'base64.c',
    'daemon.c',
    'httpserver.c',
    'json.c',
    'jsonq.c',
    'linda.c',
    'list.c',
    'network.c',
    'scriptlet.c',
    'skipbuck.c',
    'skiplist.c',
    'store.c',
    'thread.c',
    'tree.c',
    'uncle.c',
    'uuid.c',
  ]
)
